# tqrex

./: .coverage  .gitignore  LICENSE  README.md  demo.MOV  prototype.py  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/playgress/: __init__.py  api.py  config.py  models.py
src/playgress/engine/: __init__.py  ai.py  game.py  obstacles.py  physics.py
src/playgress/terminal/: __init__.py  input.py  render.py
src/tqrex/: __init__.py  api.py  config.py  models.py
src/tqrex/engine/: ai.py  game.py  obstacles.py  physics.py
src/tqrex/terminal/: input.py  render.py
tests/: test_api.py  test_models.py  test_physics.py
