[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ───────────────────────────────────────────────────────────
[project]
name = "playgress"
version = "0.1.0"
description = "A progress bar that lets you play the Chrome T-Rex game in your terminal"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Samoilov" }]
keywords = ["progress", "terminal", "game", "tqdm", "trex", "cli", "fun"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Environment :: Console",
]
requires-python = ">=3.11"
dependencies = []  # zero runtime deps — pure stdlib

[project.urls]
Homepage   = "https://github.com/mikhail-samoilov/playgress"
Repository = "https://github.com/mikhail-samoilov/playgress"
Issues     = "https://github.com/mikhail-samoilov/playgress/issues"

# ── Optional / dev extras ──────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
]

# ── Hatch build config ─────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/playgress"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",  # Any allowed in limited places
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version            = "3.11"
strict                    = true
files                     = ["src/playgress"]
exclude                   = ["tests/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=playgress --cov-report=term-missing"
markers   = [
    "terminal: requires an interactive terminal (skip in CI headless mode)",
]
