[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ───────────────────────────────────────────────────────────

[project]
name = "tqrex"
version = "0.1.0"
description = "A progress bar that lets you play the Chrome T-Rex game in your terminal"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Samoilov" }]
keywords = [
    "progress", "progress-bar", "terminal", "cli",
    "game", "trex", "dinosaur", "tqdm", "fun",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Games/Entertainment :: Arcade",
    "Environment :: Console",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = []  # zero runtime deps — pure stdlib

[project.urls]
Homepage   = "https://github.com/Samoilov2004/tqrex"
Repository = "https://github.com/Samoilov2004/tqrex"
Issues     = "https://github.com/Samoilov2004/tqrex/issues"
Changelog  = "https://github.com/Samoilov2004/tqrex/releases"

# ── Optional / dev extras ──────────────────────────────────────────────────────

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
]

# ── Hatch build ────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/playgress"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",  # Any is fine in limited places
    "ANN101",  # self annotation not required
    "ANN102",  # cls annotation not required
]

[tool.ruff.lint.per-file-ignores]
"tests/**"    = ["ANN"]
"examples/**" = ["ANN", "T201"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version            = "3.11"
strict                    = true
files                     = ["src/playgress"]
exclude                   = ["tests/", "examples/"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=playgress --cov-report=term-missing"
markers   = [
    "terminal: requires an interactive terminal (skip in CI headless mode)",
]
